* User post count resets to 0 when deleting a single post.
* "Fix member stats" link in AdminCP will correct user post counts as well.
* Unread markers need to be deleted when topics or users are deleted.
* Pass by reference error in avatar controls.
* A fatal installer error was corrected.
* RSS feed does not filter out unpublished topics.
* RSS feed email addresses were not RFC 2822 compliant.

Changes for 1.3.1:

* Updated German translation - Jens
* Updated Norwegian translation - Ingvild
* Updated Swedish tranlsation - ladyanna
* Added a warning on install if folders are not writable
* Quick reply bbcode and smileys load on focus
* New backup tool uses XML

  Bugs addressed:

* Renamed zip class to avoid conflict (#952)
* Jump to newest post on recent posts was using old urls
* Made sure textarea boxes are readable on usual windows themes - Matt
* User posts can go negative (#957)
* Censor words was not processing properly - harakiro
* Converted most languages to utf-8 for JSON compatibility
* Fixing icons in recent posts page (#888)
* Not all backups and skins were showing in restore/install lists
* Validation error in CP_PREFS template
* Undefined string variable during board upgrade. Not fatal.
* Topic marker crash for subforums.
* Forum recount only needs to send the display when used from the AdminCP.

Changes for 1.3.0:

* Uploaded avatars now save using original extention
* Can detect the size of uploaded avatars
* Skin exporter/importer now uses XML and tar.gz files
* Major rework on how addquotes is handled (now database end)
* Installs now possible without making settings.php writable
* Install now loads templates via XML
* Avatars can now be grouped into sub-folders
* Can now mark forums as read
* Navigation links capitalised
* Template position no longer exists
* Debug mode can be toggled from admin cp
* Can now add custom board settings via admin cp
* BB Code buttons are now loaded via javascript
* Added more strings to language files