@@ -37,6 +37,14 @@ class forum extends qsfglobal
 {
 	function execute()
 	{
+		if (!$this->perms->auth('board_view')) {
+			$this->lang->board();
+			return $this->message(
+				sprintf($this->lang->board_message, $this->sets['forum_name']),
+				($this->perms->is_guest) ? sprintf($this->lang->board_regfirst, $this->self) : $this->lang->board_noview
+			);
+		}
+
 		if (!isset($this->get['f'])) {
 			return $this->message($this->lang->forum_forum, $this->lang->forum_noexist);
 		}
