@@ -44,6 +44,14 @@ class mod extends qsfglobal
 	 **/
 	function execute()
 	{
+		if (!$this->perms->auth('board_view')) {
+			$this->lang->board();
+			return $this->message(
+				sprintf($this->lang->board_message, $this->sets['forum_name']),
+				($this->perms->is_guest) ? sprintf($this->lang->board_regfirst, $this->self) : $this->lang->board_noview
+			);
+		}
+
 		$this->set_title($this->lang->mod_label_controls);
 
 		if (!isset($this->get['s'])) {
